# chestny-znak-flow-validator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  README.ru.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  security.yml
cz_validator/: __init__.py  config.py  models.py
cz_validator/ai/: __init__.py  ai_provider.py  claim_suggester.py  human_report.py  problem_clustering.py
cz_validator/cli/: main.py
cz_validator/core/: __init__.py  consistency_checker.py  graph_builder.py  quantity_checker.py  status_checker.py
cz_validator/io_import/: __init__.py  api_schema_parser.py  csv_importer.py  mapping_profiles.py  xlsx_importer.py  xml_importer.py
cz_validator/webapp/: __init__.py  app.py  schemas.py
examples/configs/: mapping_1c_utm_example.yaml  validation_profile_example.yaml
examples/data/: chestny_znak_api_response_sample.json  producer_export_sample.csv  retail_export_sample.xml
examples/reports/: claims_sample_ru.md  discrepancies_report_sample.md
scripts/: lint.sh  sample_run_validate.sh  security_scan.sh
tests/: conftest.py
tests/integration/: test_full_flow_producer_to_retail.py  test_report_generation_flow.py
tests/unit/: test_api_schema_parser.py  test_claim_suggester.py  test_cli_main.py  test_consistency_checker.py  test_csv_importer.py  test_graph_builder.py  test_human_report.py  test_problem_clustering.py  test_pypdf_regression.py  test_quantity_checker.py  test_status_checker.py  test_xlsx_importer.py  test_xml_importer.py
